--- a/_sitemap.html
+++ b/_sitemap.html
@@ -137,6 +137,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-150rngu{-webkit-overflow-scrolling:touch;}
 .r-1517nx3{transform:translateY(-50%);}
 .r-15zivkp{margin-bottom:4px;}
+.r-161ttwi{left:12px;}
 .r-16y2uox{flex-grow:1;}
 .r-173mn98{align-self:flex-end;}
 .r-173mzie{transform:scaleY(-1);}
@@ -219,7 +220,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1nxhmzv{margin-bottom:28px;}
 .r-1ny4l3l{outline-style:none;}
 .r-1ocf4r9{scroll-snap-type:y mandatory;}
-.r-1od2jal{font-weight:300;}
 .r-1onu96p{border-curve:continuous;}
 .r-1oszu61{align-items:stretch;}
 .r-1otgn73{touch-action:manipulation;}
@@ -362,7 +362,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-s67bdx{font-size:48px;}
 .r-sfbmgh{z-index:9999;}
 .r-so7y2g{line-height:64px;}
-.r-tceitz{left:16px;}
 .r-tl32pe{background-color:rgba(58,90,138,1.00);}
 .r-tskmnb{padding-top:8px;}
 .r-tsynxw{text-transform:uppercase;}
@@ -379,7 +378,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-vvn4in{background-position:center;}
 .r-vw2c0b{font-weight:bold;}
 .r-wfqgy4{transition-duration:100ms;}
-.r-whyea9{background-color:rgba(42,42,78,1.00);}
 .r-ws9h79{left:4px;}
 .r-x11e5r{font-family:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
 .r-x3cy2q{background-size:100% 100%;}
@@ -403,5 +401,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-356af484f07a89de4f840303cfb773e2.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-fa6cfcc7b81f4f1979c4b3862535e194.js" defer></script>
 </body></html>
