--- a/_sitemap.html
+++ b/_sitemap.html
@@ -150,7 +150,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-17tloay{opacity:0.6;}
 .r-17u3ijr{background-color:rgba(155,161,166,0.27);}
 .r-184en5c{z-index:1;}
-.r-1862ga2{color:rgba(119,119,119,1.00);}
 .r-18nhz7w{top:-3px;}
 .r-18u1ve8{color:rgba(255,255,255,0.40);}
 .r-18u37iz{flex-direction:row;}
@@ -306,6 +305,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-bv2aro{padding-left:env(safe-area-inset-left);}
 .r-c1zdzb{background-color:rgba(74,222,128,1.00);}
 .r-c68hjy{color:rgba(161,161,161,1.00);}
+.r-cc4kyd{color:rgba(153,153,153,1.00);}
 .r-cpa5s6{scroll-snap-align:start;}
 .r-cqee49{color:rgba(0,0,0,1.00);}
 .r-djgu52{color:rgba(102,102,102,1.00);}
@@ -385,7 +385,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-xdvzot{color:rgba(136,136,136,1.00);}
 .r-xx3c9p{animation-name:r-imtty0;}
 .r-y7v2we{background-color:rgba(32,36,37,1.00);}
-.r-yy2aun{font-size:26px;}
 .r-z80fyv{height:20px;}
 .r-zchlnj{right:0px;}
 .r-zebfov{box-shadow:0px 0px 4px rgba(239,68,68,0.50);}
@@ -401,5 +400,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-fa6cfcc7b81f4f1979c4b3862535e194.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-83fbd444ac6162800fe9fad5de6b6a48.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-4e87b413f8bc46d6b2302d8eda63c560.js" defer></script>
 </body></html>
