--- a/+not-found.html
+++ b/+not-found.html
@@ -130,6 +130,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-13qz1uu{width:100%;}
 .r-13tjlyg{transition-duration:0.1s;}
 .r-1472mwg{height:24px;}
+.r-149qdp9{max-height:180px;}
 .r-14gqq1x{margin-top:4px;}
 .r-14lw9ot{background-color:rgba(255,255,255,1.00);}
 .r-14sbq61{background-color:rgba(33,150,243,1.00);}
@@ -338,6 +339,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-kemksi{background-color:rgba(0,0,0,1.00);}
 .r-kizejy{color:rgba(155,161,166,1.00);}
 .r-knv0ih{margin-top:8px;}
+.r-kzbkwu{padding-bottom:12px;}
 .r-leqjx2{animation-timing-function:cubic-bezier(0.215, 0.61, 0.355, 1);}
 .r-lltvgl{overflow-x:auto;}
 .r-lpb231{height:168px;}
@@ -384,7 +386,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-ws9h79{left:4px;}
 .r-x11e5r{font-family:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
 .r-x3cy2q{background-size:100% 100%;}
-.r-xd6kpl{padding-bottom:8px;}
 .r-xdvzot{color:rgba(136,136,136,1.00);}
 .r-xx3c9p{animation-name:r-imtty0;}
 .r-y7v2we{background-color:rgba(32,36,37,1.00);}
@@ -404,5 +405,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-36ec0aec4f6f0446b0a988e4f1eeb445.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-adb3ce21f4bd706e3dc69f9bae87fadd.js" defer></script>
 </body></html>
